<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.something.phanipriya.firstproject.write_queries">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/w_query"
                android:layout_width="fill_parent"
                android:layout_height="400dp"
                android:gravity="top|start"
                android:hint="@string/write_your_query"
                android:inputType="textCapSentences|textMultiLine"
                android:scrollbars="vertical" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <EditText
                android:id="@+id/querypassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Set_a_password_query"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/qok"
            android:text="@string/ok"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#fcfbfb"
            android:background="@drawable/buttoncolor2"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>
</ScrollView>
