<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.something.phanipriya.firstproject.userpage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/total_background">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


            <Button
                android:id="@+id/b_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="170dp"
                android:background="@drawable/buttoncolor2"
                android:text="@string/faq_s"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="#fcfbfb"/>

            <Button
                android:id="@+id/b_blogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttoncolor2"
                android:text="@string/blogs"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="#fcfbfb"/>

            <Button
                android:id="@+id/b_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttoncolor2"
                android:text="@string/events"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="#fcfbfb"/>
        <TextView
            android:id="@+id/gap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:layout_marginTop="20dp">
        </TextView>

    </LinearLayout>
</ScrollView>
</RelativeLayout>
